--- a/templates/dashboard/member/index.html.twig
+++ b/templates/dashboard/member/index.html.twig
@@ -36,7 +36,11 @@
                             {% include "dashboard/member/manage-employees-table.html.twig" with {employees: employees} %}
                         {% else %}
                             <div class="card-footer bg-transparent p-0">
-                                {% include "global/message.html.twig" with { type: "dark", message: ('No result'|trans), icon: "fas fa-exclamation", class: "my-2" } %}
+                                {% component alert with {type: 'info', closeButton: false, class: 'my-2'} %}
+                                    {% block content %}
+                                        {{ 'No members found'|trans }}
+                                    {% endblock %}
+                                {% endcomponent %}
                             </div>
                         {% endif %}
                     </div>
