--- a/templates/post/post.html.twig
+++ b/templates/post/post.html.twig
@@ -4,7 +4,7 @@
 {% block title pagetitle %}
 
 {% block meta_dynamic_seo %}
-	<meta name="description" content="{{ post.content | raw | nl2br | striptags | slice(0, 200) | raw }}...">
+	<meta name="description" content="{{ post.content|raw|nl2br|striptags|slice(0, 200)|raw }}...">
 	{% if post.tags %}
 		<meta name="keywords" content="{{ post.name }}, {% for tag in post.tags %} {{ tag }} {{ not loop.last ? ', ' : '' }}{% endfor %}">
 	{% else %}
@@ -12,12 +12,12 @@
 	{% endif %}
 	<meta property="og:title" content="{{ post.name }}"/>
 	{# <meta property="og:image" content="{{ app.request.getUriForPath() }}"> #}
-	<meta property="og:description" content="{{ post.content | raw | nl2br | striptags | slice(0, 200) | raw }}...">
-	<meta property="og:created_time" content="{{ post.createdAt | date('c') }}">
+	<meta property="og:description" content="{{ post.content|raw|nl2br|striptags|slice(0, 200)|raw }}...">
+	<meta property="og:created_time" content="{{ post.createdAt|date('c') }}">
 	<meta name="twitter:title" content="{{ post.name }}"/>
 	{# <meta name="twitter:image" content="{{ app.request.getUriForPath() }}"> #}
 	<meta name="twitter:image:alt" content="{{ post.name }}"/>
-	<meta name="twitter:description" content="{{ post.content | raw | nl2br | striptags | slice(0, 200) | raw }}...">
+	<meta name="twitter:description" content="{{ post.content|raw|nl2br|striptags|slice(0, 200)|raw }}...">
 {% endblock %}
 
 {% block body %}
@@ -53,15 +53,15 @@
                         </a>
                         {% if post.readtime %}
                             <span class="text-secondary opacity-3 mx-3">|</span>
-                            <span class="text-secondary">{{ post.readtime | duration }} {{ 'min read'|trans }}</span>
+                            <span class="text-secondary">{{ post.readtime|duration }} {{ 'min read'|trans }}</span>
                         {% endif %}
                         <span class="text-secondary opacity-3 mx-3">|</span>
                         <span class="text-secondary">
-                            <i class="fas fa-clock me-2"></i>{{ post.createdAt | format_date('long') }}
+                            <i class="fas fa-clock me-2"></i>{{ post.createdAt|format_date('long') }}
                         </span>
                     </div>
                     <img src="{{ post.imageName ? (post.getImagePath) : post.getImagePlaceholder }}" class="img-fluid rounded mt-5" alt="{{ post.name }}">
-                    <div class="mt-5">{{ post.content | html_markdown }}</div>
+                    <div class="mt-5">{{ post.content|html_markdown }}</div>
                     {% if previous and next %}
                         <div class="d-md-flex justify-content-between align-items-center text-center mt-5">
                             {% if previous %}
@@ -113,7 +113,11 @@
                                     {% endfor %}
                                     {{ knp_pagination_render(comments, null, {}, {'align': 'center'}) }}
                                 {% else %}
-                                    {% include "global/message.html.twig" with { type: "dark", message: ('Be the first to comment on this article.'|trans), icon: "fas fa-exclamation", class: "my-2" } %}
+                                    {% component alert with {type: 'info', closeButton: false, class: 'my-2'} %}
+                                        {% block content %}
+                                            {{ 'Be the first to comment on this article.'|trans }}
+                                        {% endblock %}
+                                    {% endcomponent %}
                                 {% endif %}
                             </div>
                         {% elseif settings["post_comments_enabled"] == "facebook" and setting.getSettings("facebook_app_id") %}
@@ -188,7 +192,7 @@
                         </form>
                     </div>
                     {% set similarPosts = setting.getBlogPosts({"limit": 6, "category": post.category.slug, "otherthan": post.id}).getQuery().getResult() %}
-                    {% if similarPosts | length %}
+                    {% if similarPosts|length %}
                         <div class="align-items-center mt-5">
                             <h6 class="mb-3 d-inline-block">{{ 'Related post'|trans }}:</h6>
                             <ul class="list-group list-group-flush">
@@ -196,7 +200,7 @@
                                     {% set link = path('post', { slug : post.slug }) %}
                                     <li class="list-group-item ps-0">
                                         <a href="{{ link }}" class="heading-color text-primary-hover fw-semibold">
-                                            {{ post.name | html_markdown_excerpt(38) }}
+                                            {{ post.name|html_markdown_excerpt(38) }}
                                         </a>
                                     </li>
                                 {% endfor %}
